--- a/index.html
+++ b/index.html
@@ -112,7 +112,6 @@
 				underline<br>
 				italic<br>
 				dashed<br>
-				fontSize<br>
 				empty
 			</div>
 
@@ -237,6 +236,9 @@
 			<a id="savebutton" href="javascript:void(0)" download="nomnoml.png" title="Download snapshot of this diagram">
 				<img src="img/camera.png">
 			</a>
+			<a id="uploadbutton" title="Upload">
+				<img src="img/camera.png">
+			</a>
 			<a id="linkbutton" href="javascript:void(0)" target="_blank" title="Shareable link to this diagram">
 				<img src="img/link.png">
 			</a>
@@ -286,7 +288,7 @@
 [more loot] no ->[<end>e]
 
 [<actor>Sailor] - [<usecase>shiver me;timbers]</script>
-
+	<script src="node_modules/jquery/dist/jquery.js"></script>
 	<script src="lib/zepto.min.js"></script>
 	<script src="lib/lodash.min.js"></script>
 	<script src="lib/dagre.min.js"></script>
