--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
 			<a id="savebutton" href="javascript:void(0)" download="nomnoml.png" title="Download snapshot of this diagram">
 				<img src="img/camera.png">
 			</a>
-			<a id="uploadbutton" title="Upload">
+			<a id="uploadbutton" href="#" title="Upload">
 				<img src="img/camera.png">
 			</a>
 			<a id="linkbutton" href="javascript:void(0)" target="_blank" title="Shareable link to this diagram">
@@ -267,7 +267,9 @@
 			</div>
 		</div>
 	</div>
-
+	<div id="exists">
+		
+	</div>
 	<script type="text/vnd.nomnoml.class" id="defaultGraph">[Pirate|eyeCount: Int|raid();pillage()|
   [beard]--[parrot]
   [beard]-:>[foul mouth]
